# soss

./: LICENSE  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
data/: readme.md
scr/modelSOSS/: data.json  data.ttl  data.yaml  softinfo.py  softinfo.shacl.ttl  softinfo.shex.ttl  softinfo.yaml  software.schema.json  test.py
